update etcd config

--- a/k8s/etcd/config/etcd.conf
+++ b/k8s/etcd/config/etcd.conf
@@ -6,7 +6,7 @@ ETCD_DATA_DIR="/var/lib/etcd/default.etcd"
 #ETCD_HEARTBEAT_INTERVAL="100"
 #ETCD_ELECTION_TIMEOUT="1000"
 #ETCD_LISTEN_PEER_URLS="http://localhost:2380" # 集群通信URL
-ETCD_LISTEN_CLIENT_URLS="http://localhost:2379" # 客户端通过此URL通信
+ETCD_LISTEN_CLIENT_URLS="http://192.168.1.12:2379,http://localhost:2379" # 客户端通过此URL通信
 #ETCD_MAX_SNAPSHOTS="5"
 #ETCD_MAX_WALS="5"
 #ETCD_CORS=""
@@ -17,7 +17,7 @@ ETCD_LISTEN_CLIENT_URLS="http://localhost:2379" # 客户端通过此URL通信
 #ETCD_INITIAL_CLUSTER="default=http://localhost:2380" # 集群所有地址列表
 #ETCD_INITIAL_CLUSTER_STATE="new" # 集群状态,新建为new,加入已存在设为existing
 #ETCD_INITIAL_CLUSTER_TOKEN="etcd-cluster" #集群唯一标识
-ETCD_ADVERTISE_CLIENT_URLS="http://localhost:2379" # 客户端通过此URL与集群通信
+ETCD_ADVERTISE_CLIENT_URLS="http://192.168.1.12:2379,http://localhost:2379" # 客户端通过此URL与集群通信
 #ETCD_DISCOVERY=""
 #ETCD_DISCOVERY_SRV=""
 #ETCD_DISCOVERY_FALLBACK="proxy"
